--- a/module2/CSS/styles.css
+++ b/module2/CSS/styles.css
@@ -25,6 +25,7 @@ p {
   .col-dt-1, .col-dt-2, .col-dt-3, .col-dt-4, .col-dt-5, .col-dt-6, .col-dt-7, .col-dt-8, .col-dt-9, .col-dt-10, .col-dt-11, .col-dt-12 {
     float: left;
     border: 1px solid green;
+    background-color: yellow;
   }
   .col-dt-1 {
     width: 8.33%;
@@ -68,6 +69,7 @@ p {
   .col-tb-1, .col-tb-2, .col-tb-3, .col-tb-4, .col-tb-5, .col-tb-6, .col-tb-7, .col-tb-8, .col-tb-9, .col-tb-10, .col-tb-11, .col-tb-12 {
     float: left;
     border: 1px solid green;
+    background-color: black;
   }
   .col-tb-1 {
     width: 8.33%;
@@ -111,6 +113,7 @@ p {
   .col-mb-1, .col-mb-2, .col-mb-3, .col-mb-4, .col-mb-5, .col-mb-6, .col-mb-7, .col-mb-8, .col-mb-9, .col-mb-10, .col-mb-11, .col-mb-12 {
     float: left;
     border: 1px solid green;
+    background-color: yellowgreen;
   }
   .col-mb-1 {
     width: 8.33%;
