--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -3,117 +3,129 @@
 }
 h1 {
   margin-bottom: 15px;
-  color: blue;
+  color: black;
+  text-align: center;
+}
+
+.mtitle {
+  border: 2px solid black;
+  width: 35%;
+  text-align: center;
+  float: right;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 98%;
-  height: 150px;
+  background-color: gray;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
-  color: white;
+  color: black;
+  height: 100px;
+  clear: right;
 }
 
 .row {
   width: 100%;
+  margin-bottom: 10px;
 }
 
 @media (min-width: 992px) {
   .col-dt-1, .col-dt-2, .col-dt-3, .col-dt-4, .col-dt-5, .col-dt-6, .col-dt-7, .col-dt-8, .col-dt-9, .col-dt-10, .col-dt-11, .col-dt-12 {
     float: left;
-    border: 1px solid green;
-    background-color: yellow;
+    border: 1px solid black;
+    background-color: gray;
+    margin: .5%;
   }
   .col-dt-1 {
-    width: 8.33%;
+    width: 7.33%;
   }
   .col-dt-2 {
-    width: 16.67%;
+    width: 15.67%;
   }
   .col-dt-3 {
-    width: 25%;
+    width: 24%;
   }
   .col-dt-4 {
-    width: 33.33%;
+    width: 32.33%;
   }
   .col-dt-5 {
-    width: 41.67%;
+    width: 40.67%;
   }
   .col-dt-6 {
-    width: 50%;
+    width: 49%;
   }
   .col-dt-7 {
-    width: 58.33%;
+    width: 57.33%;
   }
   .col-dt-8 {
-    width: 66.67%;
+    width: 65.67%;
   }
   .col-dt-9 {
-    width: 75%;
+    width: 74%;
   }
   .col-dt-10 {
-    width: 83.33%;
+    width: 82.33%;
   }
   .col-dt-11 {
-    width: 91.67%;
+    width: 90.67%;
   }
   .col-dt-12 {
-    width: 100%;
+    width: 99%;
   }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
   .col-tb-1, .col-tb-2, .col-tb-3, .col-tb-4, .col-tb-5, .col-tb-6, .col-tb-7, .col-tb-8, .col-tb-9, .col-tb-10, .col-tb-11, .col-tb-12 {
     float: left;
-    border: 1px solid green;
-    background-color: black;
+    border: 1px solid black;
+    background-color: gray;
+    margin: .5%;
   }
   .col-tb-1 {
-    width: 8.33%;
+    width: 7.33%;
   }
   .col-tb-2 {
-    width: 16.67%;
+    width: 15.67%;
   }
   .col-tb-3 {
-    width: 25%;
+    width: 24%;
   }
   .col-tb-4 {
-    width: 33.33%;
+    width: 32.33%;
   }
   .col-tb-5 {
-    width: 41.67%;
+    width: 40.67%;
   }
   .col-tb-6 {
-    width: 50%;
+    width: 49%;
   }
   .col-tb-7 {
-    width: 58.33%;
+    width: 57.33%;
   }
   .col-tb-8 {
-    width: 66.67%;
+    width: 65.67%;
   }
   .col-tb-9 {
-    width: 75%;
+    width: 74%;
   }
   .col-tb-10 {
-    width: 83.33%;
+    width: 82.33%;
   }
   .col-tb-11 {
-    width: 91.67%;
+    width: 90.67%;
   }
   .col-tb-12 {
-    width: 100%;
+    width: 99%;
   }
 }
 
 @media (max-width: 767px) {
   .col-mb-1, .col-mb-2, .col-mb-3, .col-mb-4, .col-mb-5, .col-mb-6, .col-mb-7, .col-mb-8, .col-mb-9, .col-mb-10, .col-mb-11, .col-mb-12 {
     float: left;
-    border: 1px solid green;
-    background-color: yellowgreen;
+    border: 1px solid black;
+    background-color: gray;
+    margin-bottom: 10px;
   }
   .col-mb-1 {
     width: 8.33%;
