--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -5,11 +5,13 @@ h1 {
   margin-bottom: 20px;
   color: black;
   text-align: center;
+  font-size: 175%;
 }
 
 .mtitle {
   border: 2px solid black;
   width: 35%;
+  font-size: 125%;
   text-align: center;
   float: right;
 }
