--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -13,9 +13,29 @@ h1 {
   font-size: 175%;
 }
 
-.mtitle {
+.msection1 {
   border: 2px solid black;
-  width: 35%;
+  background-color:pink;
+  width: 150px;
+  font-size: 125%;
+  text-align: center;
+  float: right;
+}
+
+.msection2 {
+  border: 2px solid black;
+  background-color:red;
+  color:white;
+  width: 150px;
+  font-size: 125%;
+  text-align: center;
+  float: right;
+}
+
+.msection3 {
+  border: 2px solid black;
+  background-color:yellow;
+  width: 150px;
   font-size: 125%;
   text-align: center;
   float: right;
