--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   color: black;
   text-align: center;
   font-size: 175%;
@@ -54,7 +54,7 @@ p {
 
 .row {
   width: 100%;
-  margin-bottom: 9px;
+  margin-bottom: .5%;
 }
 
 @media (min-width: 992px) {
